Enable tools such as FilterBamByTag to read large files from gs://